--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <header id="masthead" class="site-header" role="banner">
 <h1 class="site-title site-title--large">
 
-<a href="https://twitter.com/search?q=%23SaveMohundForest&f=live" rel="home">Save Mohund</a>
+<a href="https://twitter.com/search?q=%23SaveMohund&f=live" rel="home">Save Mohund</a>
 </h1>
 
 <div id="links">
